// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportOptionsReducer should initialize to no options set 1`] = `
Object {
  "alfred": false,
  "atomSyntax": false,
  "atomUi": false,
  "bbEdit": false,
  "chrome": false,
  "cmd": false,
  "conEmu": false,
  "hyper": false,
  "iterm": false,
  "jetBrains": false,
  "sketchPalettes": false,
  "slack": false,
  "sublimeText": false,
  "terminal": false,
  "tmux": false,
  "vim": false,
  "vimLightline": false,
  "vsCode": false,
  "wallpaperBlockWave": false,
  "wallpaperOctagon": false,
  "wallpaperTriangles": false,
  "xcode": false,
}
`;

exports[`exportOptionsReducer should properly set an option 1`] = `
Object {
  "alfred": false,
  "atomSyntax": false,
  "atomUi": false,
  "bbEdit": false,
  "chrome": false,
  "cmd": false,
  "conEmu": false,
  "hyper": true,
  "iterm": false,
  "jetBrains": false,
  "sketchPalettes": false,
  "slack": false,
  "sublimeText": false,
  "terminal": false,
  "tmux": false,
  "vim": false,
  "vimLightline": false,
  "vsCode": false,
  "wallpaperBlockWave": false,
  "wallpaperOctagon": false,
  "wallpaperTriangles": false,
  "xcode": false,
}
`;
